WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48044
Pressing Ctrl+W when viewing a full-page PDF destroys the WKView but doesn't close its parent window
https://bugs.webkit.org/show_bug.cgi?id=48044
Summary
Pressing Ctrl+W when viewing a full-page PDF destroys the WKView but doesn't ...
Adam Roben (:aroben)
Reported
2010-10-20 23:15:32 PDT
To reproduce: 1. Go to
http://www.irs.gov/pub/irs-pdf/fw4.pdf
2. Press Ctrl+W The WKView gets destroyed but its parent window doesn't close. <
rdar://problem/8488446
>
Attachments
Ask the UI client to close the page when the WKView receives a WM_CLOSE message
(6.26 KB, patch)
2010-10-20 23:22 PDT
,
Adam Roben (:aroben)
jhoneycutt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-20 23:17:01 PDT
Adobe Reader is sending the WKView a WM_CLOSE message when the user presses Ctrl+W. WKView doesn't handle WM_CLOSE, so it gets passed along to ::DefWindowProcW, which turns around and calls ::DestroyWindow. But the UI client never gets to find out about any of this.
Adam Roben (:aroben)
Comment 2
2010-10-20 23:22:08 PDT
Created
attachment 71393
[details]
Ask the UI client to close the page when the WKView receives a WM_CLOSE message
Adam Roben (:aroben)
Comment 3
2010-10-21 10:07:17 PDT
Committed
r70247
: <
http://trac.webkit.org/changeset/70247
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug