third_party/WebKit/WebKit2/UIProcess/win/WebView.cpp
@@ -82,6 +82,9 @@ LRESULT WebView::wndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
     bool handled = true;
 
     switch (message) {
+        case WM_CLOSE:
+            m_page->tryClose();
+            break;
         case WM_DESTROY:
             m_isBeingDestroyed = true;
             close();
